<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:textColor="@color/black"
    tools:context=".StorehouseActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/tool_main"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        />

    <TextView
        android:id="@+id/title_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/title_hello"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="italic" />



        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp">


            <Button
                android:id="@+id/btn_add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_view"
                android:textColor="@color/black"
                android:onClick="onClick"
                android:text="@string/add"
                />
                <Button
                    android:id="@+id/btn_redact"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_view"
                    android:textColor="@color/black"
                    android:onClick="onClick"
                    android:text="@string/edit"
                    />

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_view"
                    android:textColor="@color/black"
                    android:onClick="onClick"
                    android:text="@string/delete"
                    />


        </TableLayout>

   </LinearLayout>