<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:textColor="@color/black"
    tools:context=".EnterActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="180dp"
        android:text="@string/strenter1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:text="@string/strreg2"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:inputType="text"
        android:height="35dp"
        android:width="300dp"
        android:background="@color/white"
        />

    <TextView
        android:id="@+id/title_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:text="@string/strreg6"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        />
    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:inputType="textPassword"
        android:height="35dp"
        android:width="300dp"
        android:background="@color/white"
        />
    <Button
        android:id="@+id/btnEnters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="150dp"
        android:background="@drawable/btn_view"
        android:textColor="@color/black"
        android:onClick="onClick"
        android:text="@string/strenter2"
        />

</LinearLayout>